# Ashare_DpointTrader-2.0

./: .gitignore  README.md  README_Chinese_ver.md  README_English_ver.md  backtester_engine.py  cleanup.py  config_schema.py  data_loader.py  feature_dpoint.py  main_cli.py  metrics.py  model_builder.py  persistence.py  pyproject.toml  pytest.ini  reporter.py  requirements.txt  search_engine.py  setup_check.py  splitter.py  structured_logging.py  test_import.py  test_reporter.py  test_reporter_funcs.py  trainer_optimizer.py
output/: best_pool.json  best_so_far.json  run_001.xlsx  run_001_config.json  run_002.xlsx  run_002_config.json
tests/: __init__.py  test_backtester.py  test_e2e_config.py  test_features.py  test_integration.py  test_main_cli.py  test_reporter.py  test_splitter.py
